--- a/doctor-dashboard.html
+++ b/doctor-dashboard.html
@@ -1,216 +1,224 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Doctor Dashboard</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
     body {
-      font-family: 'Inter', sans-serif;
-      background: #f1f5f9;
+      font-family: 'Segoe UI', sans-serif;
+      background: #f3f4f6;
       margin: 0;
-      padding: 2rem;
+      padding: 0;
     }
-    h1 {
-      text-align: center;
-      color: #2563eb;
-      margin-bottom: 1rem;
-    }
-    .summary {
-      text-align: center;
-      margin-bottom: 2rem;
-    }
-    .controls {
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-      flex-wrap: wrap;
-      margin-bottom: 2rem;
-    }
-    input, select {
-      padding: 0.6rem 1rem;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 1rem;
-    }
-    .card {
-      background: white;
-      border-radius: 1rem;
-      padding: 1.5rem;
-      margin-bottom: 1.5rem;
-      box-shadow: 0 5px 20px rgba(0,0,0,0.05);
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
-      transition: all 0.3s ease;
-      animation: fadeIn 0.5s ease-in-out;
-    }
-    @keyframes fadeIn {
-      from {opacity: 0; transform: translateY(10px);}
-      to {opacity: 1; transform: translateY(0);}
-    }
-    .card p {
-      margin: 0.5rem 0;
-    }
-    .status-badge {
-      display: inline-block;
-      padding: 0.3rem 0.7rem;
-      border-radius: 0.5rem;
-      font-size: 0.85rem;
-      font-weight: 600;
-      color: white;
-    }
-    .pending { background: #f59e0b; }
-    .confirmed { background: #10b981; }
-    .completed { background: #2563eb; }
-    .rejected { background: #ef4444; }
-    button, select {
-      margin-top: 0.5rem;
-      font-size: 1rem;
-      padding: 0.5rem 0.75rem;
-      border-radius: 0.5rem;
-      border: none;
-      cursor: pointer;
-    }
-    button {
+
+    header {
       background: #2563eb;
       color: white;
+      padding: 1rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
-    button:hover {
+
+    header h1 {
+      font-size: 1.5rem;
+      margin: 0;
+    }
+
+    #logoutBtn {
+      background: #ef4444;
+      border: none;
+      color: white;
+      padding: 0.5rem 1rem;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 0.9rem;
+      transition: 0.3s;
+    }
+
+    #logoutBtn:hover {
+      background: #b91c1c;
+    }
+
+    #bookingsContainer {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 1rem;
+      padding: 1rem;
+    }
+
+    .booking-card {
+      background: white;
+      border-radius: 1rem;
+      padding: 1rem;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+      transition: 0.3s;
+    }
+
+    .booking-card:hover {
+      transform: scale(1.01);
+    }
+
+    .status {
+      padding: 0.4rem 0.8rem;
+      border-radius: 999px;
+      font-size: 0.8rem;
+      font-weight: bold;
+      display: inline-block;
+      text-transform: capitalize;
+      margin: 0.5rem 0;
+    }
+
+    .status.pending {
+      background-color: #fde68a;
+      color: #92400e;
+    }
+
+    .status.confirmed {
+      background-color: #bbf7d0;
+      color: #065f46;
+    }
+
+    .status.completed {
+      background-color: #bfdbfe;
+      color: #1e3a8a;
+    }
+
+    .update-btn {
+      background: #2563eb;
+      color: white;
+      padding: 0.4rem 0.8rem;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 0.85rem;
+      transition: 0.3s;
+    }
+
+    .update-btn:hover {
       background: #1e40af;
+    }
+
+    @media (max-width: 480px) {
+      header h1 {
+        font-size: 1.2rem;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Doctor Dashboard</h1>
-  <div class="summary" id="summaryStats"></div>
-  <div class="controls">
-    <input type="text" id="searchInput" placeholder="Search by name or invoice...">
-    <select id="statusFilter">
-      <option value="">All Statuses</option>
-      <option value="pending">Pending</option>
-      <option value="confirmed">Confirmed</option>
-      <option value="completed">Completed</option>
-      <option value="rejected">Rejected</option>
-    </select>
-  </div>
-  <div id="bookingsContainer"></div>  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
-    import {
-      getFirestore, collection, getDocs, updateDoc, doc, onSnapshot
-    } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
-    import {
-      getAuth, onAuthStateChanged
-    } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-auth.js";
+  <header>
+    <h1>Doctor Dashboard</h1>
+    <button id="logoutBtn">Logout</button>
+  </header>
 
+  <div id="bookingsContainer">Loading...</div>
+
+  <!-- Firebase SDK -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+    import {
+      getFirestore,
+      collection,
+      query,
+      where,
+      getDocs,
+      doc,
+      updateDoc
+    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+
+    // ✅ Your Firebase Config
     const firebaseConfig = {
       apiKey: "AIzaSyAbknkfD6Je1a3wDZRTzn6lC62CNUhhwLc",
       authDomain: "store-471f1.firebaseapp.com",
       projectId: "store-471f1",
       storageBucket: "store-471f1.appspot.com",
-      messagingSenderId: "619523242611",
-      appId: "1:619523242611:web:fdfa53044c62f844574806"
+      messagingSenderId: "399183437333",
+      appId: "1:399183437333:web:fa417bd93f32f35087cbd3"
     };
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
     const auth = getAuth(app);
+    const bookingsContainer = document.getElementById("bookingsContainer");
+    const logoutBtn = document.getElementById("logoutBtn");
 
-    const container = document.getElementById("bookingsContainer");
-    const searchInput = document.getElementById("searchInput");
-    const statusFilter = document.getElementById("statusFilter");
-    const summaryStats = document.getElementById("summaryStats");
+    const statusOrder = ["pending", "confirmed", "completed"];
 
-    let bookings = [];
-    let servicesMap = new Map();
-
-    function renderBookings(data) {
-      container.innerHTML = "";
-      data.forEach(b => {
-        const card = document.createElement("div");
-        card.className = "card";
-        const serviceName = servicesMap.get(b.serviceId) || b.serviceId;
-        card.innerHTML = `
-          <p><strong>Invoice:</strong> ${b.invoiceId}</p>
-          <p><strong>Name:</strong> ${b.name}</p>
-          <p><strong>Email:</strong> ${b.email}</p>
-          <p><strong>Phone:</strong> ${b.phone}</p>
-          <p><strong>Location:</strong> ${b.location}</p>
-          <p><strong>Service:</strong> ${serviceName}</p>
-          <p><strong>Date:</strong> ${b.date}</p>
-          <p><strong>Status:</strong> <span class="status-badge ${b.status}">${b.status.toUpperCase()}</span></p>
-          <select id="status-${b.id}">
-            <option disabled selected>Update Status</option>
-            <option value="pending">Pending</option>
-            <option value="confirmed">Confirmed</option>
-            <option value="completed">Completed</option>
-            <option value="rejected">Rejected</option>
-          </select>
-          <button onclick="window.updateStatus('${b.id}')">Update</button>
-        `;
-        container.appendChild(card);
+    // 🔴 Logout Button
+    logoutBtn.addEventListener("click", () => {
+      signOut(auth).then(() => {
+        window.location.href = "/index.html";
+      }).catch((error) => {
+        alert("Logout failed: " + error.message);
       });
-    }
-
-    function updateSummary(data) {
-      const pending = data.filter(b => b.status === "pending").length;
-      const confirmed = data.filter(b => b.status === "confirmed").length;
-      const completed = data.filter(b => b.status === "completed").length;
-      const rejected = data.filter(b => b.status === "rejected").length;
-      summaryStats.innerHTML = `Pending: ${pending} | Confirmed: ${confirmed} | Completed: ${completed} | Rejected: ${rejected}`;
-    }
-
-    window.updateStatus = async (id) => {
-      const newStatus = document.getElementById(`status-${id}`).value;
-      if (!newStatus) return;
-      await updateDoc(doc(db, "bookings", id), { status: newStatus });
-      alert("Status updated");
-    };
-
-    function filterBookings() {
-      const keyword = searchInput.value.toLowerCase();
-      const status = statusFilter.value;
-      const filtered = bookings.filter(b => {
-        return (
-          (b.name.toLowerCase().includes(keyword) || b.invoiceId.toLowerCase().includes(keyword)) &&
-          (!status || b.status === status)
-        );
-      });
-      renderBookings(filtered);
-      updateSummary(filtered);
-    }
-
-    searchInput.addEventListener("input", filterBookings);
-    statusFilter.addEventListener("change", filterBookings);
-
-    async function loadServices() {
-      const snap = await getDocs(collection(db, "services"));
-      snap.forEach(doc => {
-        servicesMap.set(doc.id, doc.data().title || "Untitled Service");
-      });
-    }
-
-    async function getUserRole(uid) {
-      const snap = await getDocs(collection(db, "users"));
-      const docu = snap.docs.find(d => d.id === uid);
-      return docu?.data()?.role || null;
-    }
-
-    onAuthStateChanged(auth, async user => {
-      if (user) {
-        const role = await getUserRole(user.uid);
-        if (role !== "doctor") {
-          alert("Access denied");
-          window.location.href = "/index.html";
-          return;
-        }
-        await loadServices();
-        onSnapshot(collection(db, "bookings"), snap => {
-          bookings = snap.docs.map(doc => ({ id: doc.id, ...doc.data() }))
-            .filter(b => b.assignedDoctor?.toLowerCase() === user.email.toLowerCase());
-          filterBookings();
-        });
-      }
     });
-  </script></body>
+
+    // 🟢 Load Bookings Assigned to Doctor
+    onAuthStateChanged(auth, async (user) => {
+      if (!user) {
+        bookingsContainer.innerHTML = "<p>Please login to view your dashboard.</p>";
+        return;
+      }
+
+      const q = query(
+        collection(db, "bookings"),
+        where("assignedDoctor", "==", user.email)
+      );
+      const snapshot = await getDocs(q);
+
+      bookingsContainer.innerHTML = "";
+
+      if (snapshot.empty) {
+        bookingsContainer.innerHTML = "<p>No bookings assigned to you.</p>";
+        return;
+      }
+
+      snapshot.forEach(docSnap => {
+        const data = docSnap.data();
+        const bookingId = docSnap.id;
+
+        const card = document.createElement("div");
+        card.className = "booking-card";
+
+        card.innerHTML = `
+          <h3>${data.name}</h3>
+          <p><strong>Phone:</strong> ${data.phone}</p>
+          <p><strong>Email:</strong> ${data.email}</p>
+          <p><strong>Date:</strong> ${data.date}</p>
+          <p><strong>Location:</strong> ${data.location}</p>
+          <p><strong>Invoice:</strong> ${data.invoiceId}</p>
+          <p><strong>Status:</strong> <span class="status ${data.status.toLowerCase()}">${data.status}</span></p>
+          <button class="update-btn" data-id="${bookingId}" data-status="${data.status}">Update Status</button>
+        `;
+
+        bookingsContainer.appendChild(card);
+      });
+
+      // 🔁 Handle Status Updates
+      bookingsContainer.addEventListener("click", async (e) => {
+        if (e.target.classList.contains("update-btn")) {
+          const bookingId = e.target.getAttribute("data-id");
+          const currentStatus = e.target.getAttribute("data-status").toLowerCase();
+          const nextIndex = statusOrder.indexOf(currentStatus) + 1;
+
+          if (nextIndex >= statusOrder.length) {
+            alert("Booking is already completed.");
+            return;
+          }
+
+          const nextStatus = statusOrder[nextIndex];
+          const bookingRef = doc(db, "bookings", bookingId);
+
+          await updateDoc(bookingRef, { status: nextStatus });
+
+          alert(`Status updated to "${nextStatus}"`);
+          location.reload();
+        }
+      });
+    });
+  </script>
+</body>
 </html>
